--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my file 2</title>
+    <title>My file 2</title>
 </head>
 <body>
-    hii!
+    Hii!
 </body>
 </html>
